--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
+oebinarytools/test_dataset filter=lfs diff=lfs merge=lfs -text
+.bin filter=lfs diff=lfs merge=lfs -text
+oebinarytools/test_dataset/B7357/2020-10-16_13-21-53/Record/[[:space:]]Node/[[:space:]]110/experiment1/recording1/continuous/Rhythm_FPGA-105.0/continuous.bin filter=lfs diff=lfs merge=lfs -text
+oebinarytools/test_dataset/B7357/2020-10-16_13-21-53/Record/[[:space:]]Node/[[:space:]]110/experiment2/recording2/continuous/Rhythm_FPGA-105.0/continuous.bin filter=lfs diff=lfs merge=lfs -text
+oebinarytools/test_dataset/B7357/2020-10-16_13-21-53/Record/[[:space:]]Node/[[:space:]]110/experiment2/recording1/continuous/Rhythm_FPGA-105.0/continuous.bin filter=lfs diff=lfs merge=lfs -text
+*.dat filter=lfs diff=lfs merge=lfs -text
